# substrate-advnce-learning

./: .gitignore  LICENSE  README.md
erc20/: README.md  lib.rs
lesson1/: README.md
lesson1/substrate-node-template/: Cargo.toml
lesson1/substrate-node-template/pallets/poe/: Cargo.toml
lesson1/substrate-node-template/pallets/poe/src/: lib.rs  mock.rs
lesson1/substrate-node-template/runtime/src/: lib.rs
lesson2/: README.md
lesson3/: README.md
lesson4/: README.md
lesson5/: README.md
lesson6/: README.md
substrate-node-template/: Cargo.toml  spec-dev-raw.json  spec-dev.json
substrate-node-template/pallets/kitties/: Cargo.toml
substrate-node-template/pallets/kitties/src/: lib.rs  mock.rs  tests.rs
substrate-node-template/pallets/kitties/src/storage/: mod.rs  v0.rs  v1.rs  v2.rs
substrate-node-template/pallets/ocw-homework/: Cargo.toml
substrate-node-template/pallets/ocw-homework/src/: lib.rs
substrate-node-template/pallets/ocw-homework/src/offchain/: indexing.rs  mod.rs  test_http.rs
substrate-node-template/pallets/ocw-tutorials/: Cargo.toml
substrate-node-template/pallets/ocw-tutorials/src/: lib.rs  mock.rs
substrate-node-template/pallets/ocw-tutorials/src/offchain/: mod.rs  sleep.rs  storage.rs
substrate-node-template/pallets/ocw-tutorials/src/utils/: block_number.rs  mod.rs
substrate-node-template/pallets/poe/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
substrate-node-template/pallets/template-2/: Cargo.toml
substrate-node-template/pallets/template-2/src/: lib.rs  mock.rs  tests.rs
substrate-node-template/runtime/: Cargo.toml
substrate-node-template/runtime/src/: lib.rs  pallets.rs
substrate-node-template/runtime/src/offchain/: app_crypto.rs  impl_for_runtime.rs  mod.rs
